logs/rings.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/fluid'...
Compiling './lib/python3.5/site-packages/fluid/DataSet.py'...
***   File "./lib/python3.5/site-packages/fluid/DataSet.py", line 67
    print "Hey ho!"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fluid/atmosphere'...
Compiling './lib/python3.5/site-packages/fluid/coards.py'...
***   File "./lib/python3.5/site-packages/fluid/coards.py", line 107
    raise Exception, 'Invalid date origin: %s' % origin
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fluid/common'...
Listing './lib/python3.5/site-packages/fluid/interaction'...
Compiling './lib/python3.5/site-packages/fluid/interaction/heat_flux.py'...
***   File "./lib/python3.5/site-packages/fluid/interaction/heat_flux.py", line 116
    print "Function short_wave_clear_sky incomplete!!! Lat out of range."
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fluid/interaction/others.py'...
***   File "./lib/python3.5/site-packages/fluid/interaction/others.py", line 101
    print "Epa!!!"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fluid/io.py'...
***   File "./lib/python3.5/site-packages/fluid/io.py", line 46
    raise UnknownTypeError, "I don't know how to open %s." % filename
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fluid/magic.py'...
***   File "./lib/python3.5/site-packages/fluid/magic.py", line 77
    print 'Passing simple array to sum_one...'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fluid/ocean'...
Compiling './lib/python3.5/site-packages/fluid/ocean/estuary.py'...
***   File "./lib/python3.5/site-packages/fluid/ocean/estuary.py", line 12
    """
     ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xfa in position 0: invalid start byte

Compiling './lib/python3.5/site-packages/fluid/ocean/rings.py'...
***   File "./lib/python3.5/site-packages/fluid/ocean/rings.py", line 155
    print "Center velocities (start)",u_c,v_c
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fluid/test.py'...
***   File "./lib/python3.5/site-packages/fluid/test.py", line 14
    print dir(Atm)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fluid-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rings'...
Listing './lib/python3.5/site-packages/rings/misc'...
Compiling './lib/python3.5/site-packages/rings/ring.py'...
***   File "./lib/python3.5/site-packages/rings/ring.py", line 150
    print p
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rings/utils.py'...
***   File "./lib/python3.5/site-packages/rings/utils.py", line 143
    print "Couldn't open the config file: %s" % cfg_file
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rings-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
